--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -164,8 +164,9 @@
 
 .card-description2{
   h2{
-        margin-bottom: 0;
+        margin-bottom: 10px;
         font-size: 18px;
+      margin-left:7px;
 
   }
 }
