--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -126,7 +126,7 @@
                   <div class="col-md-3" style="padding-left: 0px;">
                     <div class="pending-items">
                     <div  data-toggle="modal" data-target="#myModal-<%= item.id %>">
-                      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;">
+                      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;display: flex;align-items: flex-end;">
                         <div class="card-description2">
                           <h2><%= item.name %></h2>
                         </div>
