--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
 <div id="shopping-click">
-  <h2><i class="fas fa-shopping-cart"></i></h2>
+  <h2><%= link_to icon('fas', 'shopping-cart'), cart_path %></h2>
 </div>
 
 <div class="container">
