chaning text-decoration in index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -30,6 +30,11 @@ body {
   color: black;
 }
 
+.navbar-wagon-brand:focus {
+  text-decoration: none;
+  color: black;
+}
+
 /* User Avatar */
 .navbar-wagon .avatar {
   height: 35px;
