--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,3 +1,4 @@
+<% raise %>
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
