--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -5,7 +5,7 @@
     margin: 0 !important;
     padding: 0;
   }
-  padding-bottom: 15px;
+  padding-bottom: 20px;
 }
 
 .input-bar {
@@ -71,4 +71,63 @@
   -moz-box-shadow: 3px -2px 42px -9px rgba(184,180,184,.6);
   box-shadow: 3px -2px 42px -9px rgba(184,180,184,.6);
 
+}
+
+.simple_form label{
+  font-family: Montserrat !important;
+  color: gray !important;
+  font-weight: 400 !important;
+  font-size: 15px !important;
+}
+
+#item_category, #start_date, #end_date, #item_picture, #user_avatar{
+ font-family: Montserrat !important;
+ color: gray !important;
+ font-weight: 400 !important;
+ font-size: 15px !important;
+ background-color: #fff !important;
+}
+
+.pt-0 {
+ font-family: Montserrat !important;
+ color: gray !important;
+ font-weight: 400 !important;
+ font-size: 15px !important;
+ background-color: #fff !important;
+}
+
+.select2-search__field{
+  font-family: Montserrat !important;
+  color: gray !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+}
+
+input{
+ background-color: #fff !important;
+
+}
+
+.form-button{
+  background-color: black !important;
+  color: #fff !important;
+}
+
+.form-button:hover{
+  background-color: #fff !important;
+  color: black !important;
+  border: 2px solid black !important;
+}
+
+.link-style a{
+color: gray;
+&:hover{
+  color: black;
+  text-decoration: none;
+}
+
+}
+
+.link-style{
+margin-top: 20px !important;
 }
