--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,7 @@
-<div class="container">
+<div class="container-fluid" style="background-color: rgba(248,248,248.06) !important;">
+  <div class="container " style="margin-top: 30px; margin-bottom: 30px;">
+    <div class="row">
+      <div class="col-xs-6 col-xs-offset-3" style="background-color: white !important;box-shadow: 1px 1px 3px #eaeaea;">
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -34,4 +37,8 @@
   <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
   <%= link_to "Back", :back %>
+   </div>
+   </div>
+ </div>
 </div>
+
