--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -85,7 +85,7 @@
 }
 
 // .allign-button{
-// text-align: center;
+// background-color: black !important;
 // }
 
 .filter-style{
@@ -94,7 +94,7 @@
 }
 
 .my-button{
-  background-color: black;
+  background-color: black !important;
   font-size: 15px;
   color:white;
   width: 20%;
