--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -186,7 +186,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-11 col-xs-offset-1 col-md">
+    <div class="col-xs-11 col-xs-offset-1 col-md" style="margin-left: 46px;">
 
 <style>
   .marker {
@@ -197,7 +197,7 @@
 <div
 class="container"
 id="map"
-style="width: 70%; height: 500px;"
+style="width: 100%; height: 500px;"
 data-markers="<%= @markers.to_json %>"
 data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 >
