--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -199,6 +199,7 @@ $quantity-btn-color: #95d7fc;
     position: absolute;
     top: -1px !important;
     right: -1px !important;
+    z-index: 10;
 }
 
 #reservation_quantity{
