--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -159,7 +159,8 @@
     <% end %>
 
     <!-- CARDS IN CART -->
-    <h5>ITEMS IN YOUR CART:</h5>
+    <br>
+    <h5 style="margin-left: 55px;">ITEMS IN YOUR CART:</h5>
     <div class="row">
       <div class="col-xs-11 col-md-10 col-centered" style="
         margin-left: 0; display: flex;">
