--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -94,6 +94,7 @@
  font-weight: 400 !important;
  font-size: 15px !important;
  background-color: #fff !important;
+ margin-bottom:5px !important;
 }
 
 .select2-search__field{
@@ -131,3 +132,8 @@ color: gray;
 .link-style{
 margin-top: 20px !important;
 }
+
+.collection_radio_buttons{
+margin-left: 5px;
+}
+
