--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,24 +1,34 @@
-<h2>Change your password</h2>
+<div class="container-fluid" style="background-color: rgba(248,248,248.06) !important;">
+  <div class="container " style="margin-top: 30px; margin-bottom: 30px;">
+    <div class="row">
+      <div class="col-xs-6 col-xs-offset-3" style="background-color: white !important;box-shadow: 1px 1px 3px #eaeaea;">
+        <h2>Change your password</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= f.error_notification %>
 
-  <%= f.input :reset_password_token, as: :hidden %>
-  <%= f.full_error :reset_password_token %>
+        <%= f.input :reset_password_token, as: :hidden %>
+        <%= f.full_error :reset_password_token %>
 
-  <div class="form-inputs">
-    <%= f.input :password,
-                label: "New password",
-                required: true,
-                autofocus: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
+        <div class="form-inputs">
+          <%= f.input :password,
+          label: "New password",
+          required: true,
+          autofocus: true,
+          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+          input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
+        </div>
+
+        <div class="form-actions">
+          <%= f.button :submit, "Change my password" %>
+        </div>
+        <% end %>
+
+        <div class="link-style">
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
