--- a/app/views/shared/_card_modal.html.erb
+++ b/app/views/shared/_card_modal.html.erb
@@ -66,12 +66,7 @@
               <div class="form-modal">
                 <label for="add-to-cart-#{item.id}">
                   <% if user_signed_in? %>
-                    <span class="update-quantity" data-in-cart="<%= item.reservations.find_by(user_id: current_user.id).present? %>">
-
-
-                    </span>
-
-
+                  <span class="update-quantity" data-in-cart="<%= item.reservations.find_by(user_id: current_user.id).present? %>">                  </span>
                   <% end %>
                 </label>
 
@@ -88,13 +83,13 @@
                   <% @value = "" %>
 
                   <%if item.reservations.where(user_id: current_user.id).any?%>
-                  <%  @value = item.reservations.find(user_id: current_user.id).quantity%>
+                  <%  @value = item.reservations.find_by(user_id: current_user.id).quantity%>
                   <%else%>
                   <%  @value = 1%>
                   <%end%>
-                  <%= f.text_field :quantity, value: @value, class: "form-control input-number circle"  %>
+                  <%= f.text_field :quantity, value: @value, class: "form-control input-number circle" %>
                   <%= f.hidden_field :item_id, value: item.id %>
-
+                  <% end %>
                   <!-- END QUANTITY RESERVED -->
 
                   <div class="input-group-btn">
@@ -102,29 +97,33 @@
                       <span class="glyphicon glyphicon-plus"></span>
                     </button>
                   </div>
+
+
                 </div>
               </div>
             </div>
             <!-- END FORM WITH UP AND DOWN BUTTONS -->
           </div>
 
+        <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
+          <button type="submit" class="btn btn-dark btn-lg" form="add-to-cart-<%=item.id%>">
+            <span class="glyphicon glyphicon-plus"></span>
+            <span class="btn btn-dark btn-lg">Add to Cart</span>
+          </button>
         </div>
-          <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
-              <span class="glyphicon glyphicon-plus"></span>
-              <%= f.button :'Add to Cart', input_html: {class: "btn btn-dark btn-lg"} %>
-              <% end %>
-          </div>
-          <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
-              <span class="glyphicon glyphicon-plus"></span>
-              <%= form_with model: @reservation, url: purchased_items_create_path, local: true do |f| %>
-              <%= f.hidden_field :quantity, value: @value, class: "form-control input-number circle"  %>
-              <%= f.hidden_field :item_id, value: item.id %>
-              <%= f.hidden_field :amount, value: (item.price * 1.05) %>
-              <%= f.button :'One-Click Shop', input_html: {class: "btn btn-dark btn-lg"},
-                            name: 'subaction', value: 'One-Click' %>
-          <% end %>
 
-          </div>
+        <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
+          <span class="glyphicon glyphicon-plus"></span>
+          <%= form_with model: @reservation, url: purchased_items_create_path, local: true do |f| %>
+          <%= f.hidden_field :quantity, value: @value, class: "form-control input-number circle"  %>
+          <%= f.hidden_field :item_id, value: item.id %>
+          <%= f.hidden_field :amount, value: (item.price * 1.05) %>
+          <%= f.button :'One-Click Shop', input_html: {class: "btn btn-dark btn-lg"},
+          name: 'subaction', value: 'One-Click' %>
+          <% end %>
+        </div>
+
+        </div>
       </div>
 
     </div>
