--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -68,7 +68,7 @@
   <% end %>
 
 
-<% if @query.present? %>
+<% if @query.present?  %>
 
 <% if @empty %>
 <div class="container">
@@ -84,13 +84,35 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-11 col-xs-offset-1 col-md">
-    <% @items.each do |item| %>
-    <div class="col-md-3">
-      <%= render 'shared/card', item: item, in_cart: false %>
+      <% @items.each do |item| %>
+      <div class="col-md-3">
+        <%= render 'shared/card', item: item, in_cart: false %>
+      </div>
+      <% end %>
     </div>
-    <% end %>
   </div>
+</div>
+<% else %>
+<% if @items.length < 5 %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-11 col-xs-offset-1 col-md">
+      <div class="search-filter1-box">
+        <h2 style="margin-top: 60px;"> NEW FOOD </h2>
+      </div>
     </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-11 col-xs-offset-1 col-md">
+      <% @items.each do |item| %>
+      <div class="col-md-3">
+        <%= render 'shared/card', item: item, in_cart: false %>
+      </div>
+      <% end %>
+    </div>
+  </div>
 </div>
 <% else %>
 <div class="container">
@@ -136,7 +158,29 @@
   </div>
 </div>
 <!-- </div> -->
-
+<% end %>
+<% if %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-11 col-xs-offset-1 col-md">
+      <div class="search-filter1-box">
+        <h2 style="margin-top: 60px;"> CLOSEST </h2>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-11 col-xs-offset-1 col-md">
+      <% @items_close.each do |item| %>
+      <div class="col-md-3">
+        <%= render 'shared/card', item: item, in_cart: false %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+<% else %>
 <div class="container">
   <div class="row">
     <div class="col-xs-11 col-xs-offset-1 col-md">
@@ -180,6 +224,7 @@
     </div>
   </div>
 </div>
+<% end %>
 <!-- </div> -->
 <% end %>
 
