--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,8 +1,10 @@
-<% if user_signed_in? %>
-  <div id="shopping-click">
+<div id="shopping-click">
+  <% if user_signed_in? %>
     <h2><%= link_to icon('fas', 'shopping-cart'), cart_path %></h2>
-  </div>
-<% end %>
+  <% else %>
+    <h2><%= link_to icon('fas', 'utensils'), new_user_session_path %></h2>
+  <% end %>
+</div>
 
 <div class="container">
   <div class="row">
@@ -68,7 +70,6 @@
   <% @items.each do |item| %>
     <%= render 'shared/card_modal', item: item %>
   <% end %>
-
 
 <% if @query.present? %>
 
@@ -185,30 +186,25 @@
 <!-- </div> -->
 <% end %>
 
-
 <div class="container">
   <div class="row">
     <div class="col-xs-11 col-xs-offset-1 col-md" style="margin-left: 46px;">
-
-<style>
-  .marker {
-    background-size: contain;
-  }
-</style>
-
-<div
-class="container"
-id="map"
-style="width: 100%; height: 500px;"
-data-markers="<%= @markers.to_json %>"
-data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
->
-</div>
+      <style>
+        .marker {
+          background-size: contain;
+        }
+      </style>
+      <div
+      class="container"
+      id="map"
+      style="width: 100%; height: 500px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+      >
+      </div>
     </div>
   </div>
 </div>
-
-
 
 <% else %>
 
@@ -224,5 +220,3 @@ data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
   </div>
 
 <% end %>
-
-
