--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,8 @@
+<div class="container-fluid" style="background-color: rgba(248,248,248.06) !important;">
+  <div class="container " style="margin-top: 30px; margin-bottom: 30px;">
+    <div class="row">
+      <div class="col-xs-6 col-xs-offset-3" style="background-color: white !important;box-shadow: 1px 1px 3px #eaeaea;">
+
 <h2>Forgot your password?</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -14,5 +19,10 @@
     <%= f.button :submit, "Send me reset password instructions" %>
   </div>
 <% end %>
-
+<div class="link-style">
 <%= render "devise/shared/links" %>
+</div>
+   </div>
+   </div>
+ </div>
+</div>
