--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,6 +6,18 @@
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
+  <%= f.input :username,
+   label: false,
+   placeholder: "Username*",
+   autofocus: true,
+   required: true , input_html: { class: "input-bar"} %>
+      <%= f.input :name,
+      label: false,
+   placeholder: "Name*",
+   autofocus: true,
+   required: true , input_html: { class: "input-bar"} %>
+   <%= f.input :role, as: :radio_buttons, collection: User::ROLES, wrapper: :vertical_collection_inline, class:"role" %>
+   <%= f.input :avatar, as: :file%>
 
   <div class="form-inputs">
     <%= f.input :email, required: true, autofocus: true %>
