resolving array - ar relation problem

--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -23,6 +23,10 @@
       <h6><%= item.user.name.capitalize %></h6>
       <h6>$ <%= item.price %> </h6>
       <p><%= item.pickup_time.strftime("pickup before %I:%M%p |") %></p>
+      <% if item.distance_location < 1 %>
+      <p><%= item.distance_location * 1000 %>m</p>
+      <% else %>
       <p><%= item.distance_location %>km</p>
-    </div>
+      <% end %>
+      </div>
   </div>
