--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner"></div>
+<div class="banner" style=" background-image:linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.2)), url(<%= image_path("veg") %>);"></div>
 <div class="container-fluid cfhome ">
   <div class="container home-one">
     <div class="why-us">
@@ -7,7 +7,7 @@
           <div class="cat-parent">
            <div class="cat-container" style="text-align: center;">
             <h1>
-              <span id="banner-typed-text";"></span>
+              <span id="banner-typed-text"></span>
             </h1>
             <!-- <button class="button-banner">Eat consciously!</button> -->
           </div>
@@ -22,9 +22,6 @@
 </div>
 
 <div class="container home-two">
-
-
-
   <div class="row">
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
@@ -48,7 +45,7 @@
   </div>
 
   <div class="row" style="margin-top: 50px;">
-  <div id="become-supplier"></div>
+    <div id="become-supplier"></div>
 
 
     <div class="col-md-6">
@@ -70,7 +67,7 @@
 <div class="container-fluid cfhome">
   <div class="container carousel-pictures">
     <div class="row">
-                    <div id="become-user"></div>
+      <div id="become-user"></div>
 
       <div class="col-xs-10 col-md-10 col-centered">
         <h1 style="text-transform: uppercase; font-weight: bold;">Get inspired</h1>
